--- a/src/style.css
+++ b/src/style.css
@@ -70,18 +70,19 @@ main {
 }
 
 .weather-app-icon {
-  font-size: 44px;
-  margin-top: 22px;
+  width: 88px;
+  height: 88px;
 }
 
 .weather-app-temperature {
   font-size: 88px;
   font-weight: bold;
-  margin-left: 10px;
+  margin-left: 5px;
+  line-height: 88px;
 }
 
 .weather-app-unit {
-  margin-top: 16px;
+  margin-top: 10px;
   font-size: 28px;
 }
 
